--- a/pom.xml
+++ b/pom.xml
@@ -1,94 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	Copyright 2016
-	Ubiquitous Knowledge Processing (UKP) Lab
-	Technische Universität Darmstadt
+  Copyright 2016
+  Ubiquitous Knowledge Processing (UKP) Lab
+  Technische Universität Darmstadt
 
-	Licensed under the Apache License, Version 2.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-	http://www.apache.org/licenses/LICENSE-2.0
+  http://www.apache.org/licenses/LICENSE-2.0
 
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>dkpro-parent-pom</artifactId>
-		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-		<version>10</version>
-	</parent>
-    <properties>
-        <dkpro.core.version>1.7.0</dkpro.core.version>
-        <jung.version>2.0.1</jung.version>
-    </properties>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-	<artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<modules>
-		<module>de.tudarmstadt.ukp.dkpro.wsd-asl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd-gpl</module>
-	</modules>
-	<name>DKPro WSD</name>
-	<url> https://dkpro.github.io/dkpro-wsd</url>
-	<description>DKPro WSD is a UIMA framework for word sense disambiguation. It is designed to complement DKPro Core, a collection of software components for natural language processing (NLP) based on the Apache UIMA framework. </description>
-	<inceptionYear>2013</inceptionYear>
-	<scm>
-		<url>https://github.com/dkpro/dkpro-wsd</url>
-		<connection>scm:git:https://github.com/dkpro/dkpro-wsd</connection>
-		<developerConnection>scm:git:https://github.com/dkpro/dkpro-wsd</developerConnection>
-	</scm>
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/dkpro/dkpro-wsd/issues</url>
-	</issueManagement>
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
-				<version>1.0-beta-2</version>
-			</extension>
-		</extensions>
-	</build>
-	<repositories>
-		<repository>
-			<id>ukp-oss-releases</id>
-			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
-		</repository>
-	</repositories>
-	<distributionManagement>
-		<repository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-releases-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<developers>
-		<developer>
-			<id>miller</id>
-			<name>Tristan Miller</name>
-			<email>miller@ukp.informatik.tu-darmstadt.de</email>
-			<url>http://www.nothingisreal.com/</url>
-			<organization>Ubiquitous Knowledge Processing Lab, Department of Computer Science, Technische Universität Darmstadt</organization>
-			<organizationUrl>http://www.ukp.tu-darmstadt.de/</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>Europe/Berlin</timezone>
-		</developer>
-	</developers>
-	<organization>
-		<url>https://www.ukp.tu-darmstadt.de/</url>
-		<name>Ubiquitous Knowledge Processing (UKP) Lab, Technische Universität Darmstadt</name>
-	</organization>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>dkpro-parent-pom</artifactId>
+    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+    <version>10</version>
+  </parent>
+  <properties>
+    <dkpro.core.version>1.7.0</dkpro.core.version>
+    <jung.version>2.0.1</jung.version>
+  </properties>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+  <artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+  <version>1.3.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <modules>
+    <module>de.tudarmstadt.ukp.dkpro.wsd-asl</module>
+    <module>de.tudarmstadt.ukp.dkpro.wsd-gpl</module>
+  </modules>
+  <name>DKPro WSD</name>
+  <url> https://dkpro.github.io/dkpro-wsd</url>
+  <description>DKPro WSD is a UIMA framework for word sense disambiguation. It is designed to complement DKPro Core, a collection of software components for natural language processing (NLP) based on the Apache UIMA framework. </description>
+  <inceptionYear>2013</inceptionYear>
+  <scm>
+    <url>https://github.com/dkpro/dkpro-wsd</url>
+    <connection>scm:git:https://github.com/dkpro/dkpro-wsd</connection>
+    <developerConnection>scm:git:https://github.com/dkpro/dkpro-wsd</developerConnection>
+  </scm>
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/dkpro/dkpro-wsd/issues</url>
+  </issueManagement>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <notimestamp>true</notimestamp>
+          <!-- Exclude UIMA types and internal API -->
+          <excludePackageNames>*.internal.*</excludePackageNames>
+          <sourceFileExcludes>
+            <exclude>**/*_Type.java</exclude>
+          </sourceFileExcludes>
+          <tags>
+            <tag>
+              <name>generated</name>
+              <placement>X</placement>
+            </tag>
+            <tag>
+              <name>ordered</name>
+              <placement>X</placement>
+            </tag>
+            <tag>
+              <name>modifiable</name>
+              <placement>X</placement>
+            </tag>
+          </tags>
+        </configuration>
+      </plugin>
+    </plugins>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-webdav</artifactId>
+        <version>1.0-beta-2</version>
+      </extension>
+    </extensions>
+  </build>
+  <repositories>
+    <repository>
+      <id>ukp-oss-releases</id>
+      <url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <repository>
+      <id>ukp-oss</id>
+      <url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-releases-local</url>
+    </repository>
+    <snapshotRepository>
+      <id>ukp-oss</id>
+      <url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <developers>
+    <developer>
+      <id>miller</id>
+      <name>Tristan Miller</name>
+      <email>miller@ukp.informatik.tu-darmstadt.de</email>
+      <url>http://www.nothingisreal.com/</url>
+      <organization>Ubiquitous Knowledge Processing Lab, Department of Computer Science, Technische Universität Darmstadt</organization>
+      <organizationUrl>http://www.ukp.tu-darmstadt.de/</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>Europe/Berlin</timezone>
+    </developer>
+  </developers>
+  <organization>
+    <url>https://www.ukp.tu-darmstadt.de/</url>
+    <name>Ubiquitous Knowledge Processing (UKP) Lab, Technische Universität Darmstadt</name>
+  </organization>
 </project>
