--- a/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia/pom.xml
@@ -53,11 +53,11 @@
   		</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>dkpro.similarity</groupId>
+			<groupId>org.dkpro.similarity</groupId>
 			<artifactId>
-				dkpro.similarity.algorithms.wikipedia-asl
+				dkpro-similarity-algorithms-wikipedia-asl
 			</artifactId>
-			<version>2.2.0-SNAPSHOT</version>
+			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
