--- a/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
@@ -89,11 +89,11 @@
 	  		<version>0.8.1</version>
 	  	</dependency>
 		<dependency>
-			<groupId>dkpro.similarity</groupId>
+			<groupId>org.dkpro.similarity</groupId>
 			<artifactId>
-				dkpro.similarity.algorithms.core-asl
+				dkpro-similarity-algorithms-core-asl
 			</artifactId>
-			<version>2.2.0-SNAPSHOT</version>
+			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
